[package]
authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["asynchronous", "cryptography", "network-programming"]
description = "Asynchronous QUIC implementation for Monoio based on Quiche."
edition = "2021"
homepage = "https://github.com/monoio-rs/monoio-quiche"
license = "MIT/Apache-2.0"
name = "monoio-quiche"
readme = "README.md"
repository = "https://github.com/monoio-rs/monoio-quiche"
version = "0.0.1"

[dependencies]
monoio = "0.2.4"
local-sync = "0.1.0"

quiche = "0.22"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
